# china-prefecture-crosswalk

./: .gitignore  CHANGELOG.md  CITATION.cff  CODEBOOK.md  Dockerfile  LICENSE  LICENSE-DATA  README.md  app.py  pyproject.toml  render.yaml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: validate.yml
.streamlit/: config.toml
data/: SHA256SUMS
data/audit/: unified_continuity_audit.csv  wikipedia_entity_audit.csv
data/processed/: aliases.csv  county_affiliation_transitions.csv  entities.csv  entity_names.csv  entity_names_1987_2026.csv  event_entity_links.csv  event_relations.csv  events_2000_2026.csv  historical_entities.csv  legal_roster_1987_2026.csv  legal_roster_2000_2024.csv  major_lineage_relations.csv  name_exclusions.csv  sources.csv  unified_event_relations.csv  unified_events_1987_2026.csv  wikipedia_change_pages.csv  wikipedia_normalized_events_1987_1999.csv
data/raw/: china_prefecture_changes_2000_2026_master.xlsx  entity_name_map_long.csv  entity_name_map_wide.csv  prefecture_master_wide_2000_2024.csv
examples/: custom_rules.csv  sample_panel.csv
scripts/: audit_unified_continuity.py  audit_wikipedia_entities.py  build_extended_roster.py  build_major_lineage_audit.py  build_release.py  build_unified_events.py  export_city_master_v2.py  export_city_master_v3.py  fetch_wikipedia_change_archive.py  migrate_cnur_ids.py  normalize_wikipedia_history.py  sync_package_data.py  validate_data.py
tests/: test_app.py  test_cli.py  test_matcher.py
urban_crosswalk/: __init__.py  cli.py  matcher.py
(+20 files in other folders)
