[project]
name = "china-prefecture-crosswalk"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["streamlit==1.41.1", "pandas>=2.1,<3", "openpyxl>=3.1,<4", "rapidfuzz>=3.6,<4", "opencc-python-reimplemented>=0.1.7,<1"]

[project.scripts]
cnur = "urban_crosswalk.cli:main"

[tool.setuptools]
packages = ["urban_crosswalk"]

[tool.pytest.ini_options]
pythonpath = ["."]
